0-shard/default/catalog-vs-v2-10-90-mesh.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - "catalog.istioinaction.io"
  gateways:
  - catalog-gateway
  http:
  - route:
    - destination:
        host: "catalog.istioinaction.io"
        subset: version-v1
      weight: 90
    - destination:
        host: "catalog.istioinaction.io"
        subset: version-v2
      weight: 10
